# ml_repo

./: README.md  main.py  pyproject.toml  setup.py
config/: config.yml
deployment/: deploy_streamlit.py
pipelines/: predict.py.py  run_pipeline.py
src/: helper.py  logger.py
src/ml_repro/: data_loader.py  data_transformation.py  model_evaluation.py  model_trainer.py  predict.py
test/: test_deploy.py  test_model.py  test_pipeline.py
